tests/errors/generic_type_duplicate_param.dang
# Generic type with duplicate type parameters

type Bad[a, a] {
  pub left: a
}
